builder/tests/13-enum.stderr
error: expected struct, found `enum`
 --> tests/13-enum.rs:4:1
  |
4 | enum Enum {
  | ^^^^
