builder/tests/13-enum.rs
use derive_builder::Builder;

#[derive(Builder)]
enum Enum {
    Option1,
    Option2,
}

fn main() {}
